<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/default_time"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_empty_cloud"
        android:gravity="center"
        android:text="@string/default_sum"
        android:textSize="60sp"
        android:textColor="@color/black"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tv_timer"
        app:layout_constraintBottom_toTopOf="@id/tv_left_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_empty_cloud"
        android:text="@string/default_left_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/tv_sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_question"
        app:layout_constraintBottom_toTopOf="@id/tv_answers_progress"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/tv_question"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_empty_cloud"
        android:text="@string/char_question"
        app:layout_constraintBottom_toBottomOf="@id/tv_left_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_left_number"
        app:layout_constraintTop_toTopOf="@id/tv_left_number" />

    <TextView
        android:id="@+id/tv_answers_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/answers_progress"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintTop_toBottomOf="@id/tv_left_number"
        app:layout_constraintVertical_chainStyle="spread"
        tools:layout_editor_absoluteX="16dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_answers_progress"
        app:layout_constraintBottom_toTopOf="@id/option1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


<!--Options-->
    <TextView
        android:id="@+id/option1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/_1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/option2"
        app:layout_constraintBottom_toBottomOf="@id/option1"/>

    <TextView
        android:id="@+id/option2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@id/option1"
        app:layout_constraintEnd_toStartOf="@id/option3"
        app:layout_constraintTop_toTopOf="@id/option1"
        app:layout_constraintBottom_toBottomOf="@id/option1"
        />

    <TextView
        android:id="@+id/option3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@id/option2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/option1"
        app:layout_constraintBottom_toBottomOf="@id/option1"
        />

    <TextView
        android:id="@+id/option4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/option5"
        app:layout_constraintTop_toBottomOf="@id/option1"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/option5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@id/option4"
        app:layout_constraintEnd_toStartOf="@id/option6"
        app:layout_constraintTop_toTopOf="@id/option4"
        app:layout_constraintBottom_toBottomOf="@id/option4"
        />

    <TextView
        android:id="@+id/option6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@id/option5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/option4"
        app:layout_constraintBottom_toBottomOf="@id/option4"
        />



</androidx.constraintlayout.widget.ConstraintLayout>